--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,12 @@
 
 # Site settings
+baseurl: ""
+description:
+  en: Evidence and insights from the Canada.ca team.
+  fr: Validations et perspectives de l’équipe Canada.ca.
+title:
+  en: Canada.ca Blog
+  fr: Blogue de Canada.ca
 urlalt:
   en: https://blog.tbs.alpha.canada.ca
   fr: https://blogue.tbs.alpha.canada.ca
@@ -30,4 +37,3 @@ markdown: kramdown
 plugins:
   - jekyll-remote-theme
 remote_theme: wet-boew/gcweb-jekyll
-title: Canada.ca Blog
