--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 
 # Site settings
 analytics:
-  provider: adobe
-  adobe:
-    tracking_id: caacec67651710193d2331efef325107c23a0145/satelliteLib-c2082deaf69c358c641c5eb20f94b615dd606662
+  provider: google
+  google:
+    tracking_id: UA-105628416-1
 author:
   en: Digital Transformation Office
   fr: Bureau de la transformation numérique
