--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,7 @@ defaults:
       path: ""
       type: "posts"
     values:
+      css: "css/blog-dto-btn.css"
       image: true
       layout: "post"
   -
