fix: Update custom CSS and linkage in some posts

--- a/_config.yml
+++ b/_config.yml
@@ -58,9 +58,13 @@ defaults:
       path: ""
       type: "posts"
     values:
-      css: "css/blog-dto-btn.css"
+      css: "/css/custom.css"
       image: true
       layout: "post"
+  - scope:
+      path: "assets/css"
+    values:
+      output: true
   -
     scope:
       path: "en/"
