--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,7 @@ defaults:
       type: "posts"
     values:
       css: "/css/custom.css"
+      script: "/js/url-swap.js"
       image: true
       layout: "post"
   - scope:
