Add Adobe tracking configuration and enhance error page handling
Major changes:
- Configure Adobe Analytics tracking with proper service identification
- Update Netlify deployment configuration with staging support and caching
- Upgrade Jekyll to 4.4.1 and add required dependencies (base64, logger, csv)
- Add comprehensive error page system (403, 404) with bilingual support
- Consolidate error page localization into shared error-pages.yml structure
- Fix Jekyll build issues and optimize error page rendering
- Enhance analytics provider selection logic and metadata handling

Technical improvements:
- Remove Gemfile/Gemfile.lock from .gitignore to track dependencies
- Update Rakefile with conditional staging build configuration
- Add error tracking attributes to page titles for analytics
- Create reusable error page templates with shared content structure

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ analytics:
     adobe:
       tracking_id: "be5dfd287373/0127575cd23a/launch-f7c3e6060667"
       service: "ESDC-EDSC"
-      gcaaterms: "ESDC-EDSC_Canada-Blog"
+      gcaaterms: "ESDC-EDSC_CanadacaBlog-BlogueCanadaca"
     google:
       tracking_id: "GTM-KMVB8C2"
 author:
@@ -38,6 +38,7 @@ exclude:
 - "*.tmp"
 - CODE_OF_CONDUCT.md
 - CONTRIBUTING.md
+- copy-assets.sh
 - CNAME
 - gcweb-jekyll.gemspec
 - Gemfile
@@ -46,6 +47,7 @@ exclude:
 - node_modules
 - screenshot.png
 - SECURITY.md
+- Rakefile
 - README.md
 - vendor/*
 
